--- a/package.json
+++ b/package.json
@@ -28,7 +28,8 @@
   },
   "dependencies": {
     "dotenv": "^4.0.0",
-    "jsdom": "^11.0.0"
+    "jsdom": "^11.0.0",
+    "pg-promise": "^6.1.1"
   },
   "pre-commit": [
     "flow"
